[gd_scene load_steps=4 format=3 uid="uid://w5y4su4adpf4"]

[ext_resource type="Script" path="res://scenes/ui/screen/settings_screen/settings_screen.gd" id="1_xqlsa"]
[ext_resource type="PackedScene" uid="uid://bpq246h5ihhck" path="res://scenes/component/shake_shader_component/shake_shader_component.tscn" id="2_1nimh"]
[ext_resource type="PackedScene" uid="uid://cshtvp7cn4ns1" path="res://scenes/ui/settings_slider/settings_slider.tscn" id="2_usuby"]

[node name="SettingsScreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xqlsa")
shake_shader_component_scene = ExtResource("2_1nimh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleMarginContainerAudio" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleMarginContainerAudio"]
layout_mode = 2
text = "Audio"

[node name="MasterSettingsSlider" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_usuby")]
unique_name_in_owner = true
layout_mode = 2

[node name="MusicSettingsSlider" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_usuby")]
unique_name_in_owner = true
layout_mode = 2

[node name="SFXSettingsSlider" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_usuby")]
unique_name_in_owner = true
layout_mode = 2

[node name="TODOMusicTracksMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TODOMusicTracksMarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TODOMusicTracksMarginContainer/HBoxContainer"]
layout_mode = 2
text = "Music Tracks"

[node name="Button1" type="Button" parent="MarginContainer/VBoxContainer/TODOMusicTracksMarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "A"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/TODOMusicTracksMarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "B"

[node name="TitleMarginContainerEffects" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleMarginContainerEffects"]
layout_mode = 2
text = "Effects"

[node name="ShakeSettingsSlider" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_usuby")]
unique_name_in_owner = true
layout_mode = 2

[node name="TypingSettingsSlider" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_usuby")]
unique_name_in_owner = true
layout_mode = 2

[node name="TitleMarginContainerDisplay" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleMarginContainerDisplay"]
layout_mode = 2
text = "Display"

[node name="DisplaySettingsMarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/DisplaySettingsMarginContainer"]
layout_mode = 2

[node name="DisplayModeButton" type="Button" parent="MarginContainer/VBoxContainer/DisplaySettingsMarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 36)
layout_mode = 2
text = "Windowed"

[node name="DisplayResolutionButton" type="Button" parent="MarginContainer/VBoxContainer/DisplaySettingsMarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 36)
layout_mode = 2
text = "960 x 540"

[node name="DisplayLanguageButton" type="Button" parent="MarginContainer/VBoxContainer/DisplaySettingsMarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 36)
layout_mode = 2
text = "English"
